Setup cucumber testing for event listing

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,6 @@
 == README
 This is a Rails::API project serving data up to a seperate node app with Flux and React.
-It is a simple Rails application (chicago_api) that serves JSON resources to an API client, frontend (chicago_south).
-
+It is a simple Rails application (chicago_api) that serves JSON resources to an API client, frontend (chicago_south - Not available in public repository).
 
 The objective here is to slice what would be a monolithic Rails app into a lightweight backend serving API.
 Angular.js is fine to use but requires too much effort. React is getting a lot of good press, so why not use it.
@@ -12,7 +11,7 @@ React promotes componentized development.
 React a view layer helping the DOM to be more modular.
 
 All other JS frameworks are MVC so I won't compare them to React.
-React is used to build the frontend with the flux architecture.
+React is used to build the frontend with flux architecture.
 
 Flux is a one directional data flow which lines up with React. (Also a one directional data flow)
 
@@ -21,10 +20,10 @@ I'm using Devise to authenticate the user in each request.
 
 Moving forward, I'll be using tools like React Native and Relay along with React.
 
-== Adding middleware
+== Adding additional middleware
 $ bundle exec rake middleware
 
-== Running the application
+== Seeding & Running the web application
 $ bundle exec rake db:create:all
 
 $ bundle exec rake db:migrate
@@ -33,15 +32,21 @@ $ bundle exec rake db:seed
 
 $ bundle exec rake db:migrate db:test:prepare
 
-== Testing API
+== Testing API with Cucumber, Rack-test & Sinatra
+$ rackup
+  (starts sinatra on port=9292)
+
+$ rake cucumber:all
+
+== Testing API with Curl
 $ rails s -p 3002
+  (starts WEBrick server on port=3002)
 
 $  curl localhost:3002/v1/login --data "user[email]=test@test.com&user[username]=user&user[password]=password&user[password_confirmation]=password"
 
-You should have a response similar to this:
+You should have a JSON response similar to this:
 
 {
-
   "email":"test@test.com",
   "token_type":"Love_Is_An_Adventure!",
   "user_id":1,
